# ffxiv-packet-sniffer

./: Cargo.toml  README.md  build.rs
src/: clib.rs  error.rs  lib.rs  main.rs  packetsniffer.rs  sockets.rs
src/ffxiv/: client.rs  ffxivpacket.rs  header.rs  ipc_message.rs  ipc_message_types.rs  manager.rs  message.rs  mod.rs
