[package]
name = "packet-sniffer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netstat2 = "0.9.1"
sysinfo = "0.23.0"
pnet = "0.29.0"
flate2 = "1.0"
log = "0.4"

[build-dependencies]
vcpkg = "0.2.15"

[features]
clib = []
pythonlib = []
